# pyFlaskSimple

./: CMakeLists.txt  app.py  views.py
cpp/: dlx.cpp  dlx.h  main.cpp  random_int.cpp  random_int.h  sudoku.cpp  sudoku.h
static/: index.js  styles.css  test.css  test.js
templates/: index.html  test.html
